; ModuleID = '/home/carl/AnghaBench/linux/drivers/clocksource/extr_dw_apb_timer.c_apbt_next_event.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clocksource/extr_dw_apb_timer.c_apbt_next_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 }
%struct.dw_apb_clock_event_device = type { i32 }

@APBTMR_N_CONTROL = common dso_local global i32 0, align 4
@APBTMR_CONTROL_ENABLE = common dso_local global i64 0, align 8
@APBTMR_N_LOAD_COUNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.clock_event_device*)* @apbt_next_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @apbt_next_event(i64 %0, %struct.clock_event_device* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.clock_event_device*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.dw_apb_clock_event_device*, align 8
  store i64 %0, i64* %3, align 8
  store %struct.clock_event_device* %1, %struct.clock_event_device** %4, align 8
  %7 = load %struct.clock_event_device*, %struct.clock_event_device** %4, align 8
  %8 = call %struct.dw_apb_clock_event_device* @ced_to_dw_apb_ced(%struct.clock_event_device* %7)
  store %struct.dw_apb_clock_event_device* %8, %struct.dw_apb_clock_event_device** %6, align 8
  %9 = load %struct.dw_apb_clock_event_device*, %struct.dw_apb_clock_event_device** %6, align 8
  %10 = getelementptr inbounds %struct.dw_apb_clock_event_device, %struct.dw_apb_clock_event_device* %9, i32 0, i32 0
  %11 = load i32, i32* @APBTMR_N_CONTROL, align 4
  %12 = call i64 @apbt_readl_relaxed(i32* %10, i32 %11)
  store i64 %12, i64* %5, align 8
  %13 = load i64, i64* @APBTMR_CONTROL_ENABLE, align 8
  %14 = xor i64 %13, -1
  %15 = load i64, i64* %5, align 8
  %16 = and i64 %15, %14
  store i64 %16, i64* %5, align 8
  %17 = load %struct.dw_apb_clock_event_device*, %struct.dw_apb_clock_event_device** %6, align 8
  %18 = getelementptr inbounds %struct.dw_apb_clock_event_device, %struct.dw_apb_clock_event_device* %17, i32 0, i32 0
  %19 = load i64, i64* %5, align 8
  %20 = load i32, i32* @APBTMR_N_CONTROL, align 4
  %21 = call i32 @apbt_writel_relaxed(i32* %18, i64 %19, i32 %20)
  %22 = load %struct.dw_apb_clock_event_device*, %struct.dw_apb_clock_event_device** %6, align 8
  %23 = getelementptr inbounds %struct.dw_apb_clock_event_device, %struct.dw_apb_clock_event_device* %22, i32 0, i32 0
  %24 = load i64, i64* %3, align 8
  %25 = load i32, i32* @APBTMR_N_LOAD_COUNT, align 4
  %26 = call i32 @apbt_writel_relaxed(i32* %23, i64 %24, i32 %25)
  %27 = load i64, i64* @APBTMR_CONTROL_ENABLE, align 8
  %28 = load i64, i64* %5, align 8
  %29 = or i64 %28, %27
  store i64 %29, i64* %5, align 8
  %30 = load %struct.dw_apb_clock_event_device*, %struct.dw_apb_clock_event_device** %6, align 8
  %31 = getelementptr inbounds %struct.dw_apb_clock_event_device, %struct.dw_apb_clock_event_device* %30, i32 0, i32 0
  %32 = load i64, i64* %5, align 8
  %33 = load i32, i32* @APBTMR_N_CONTROL, align 4
  %34 = call i32 @apbt_writel_relaxed(i32* %31, i64 %32, i32 %33)
  ret i32 0
}

declare dso_local %struct.dw_apb_clock_event_device* @ced_to_dw_apb_ced(%struct.clock_event_device*) #1

declare dso_local i64 @apbt_readl_relaxed(i32*, i32) #1

declare dso_local i32 @apbt_writel_relaxed(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
